73) kernel: net: tcp: remove redundant checks.<br>
74) kernel: net: flow_dissector: Pre-initialize ip_proto in __skb_flow_dissect().<br>
75) kernel: net: ipv6: fix possible use after free of dev stats.<br>
76) kernel: net: cleanup unsigned to unsigned int.<br>
77) kernel: net: inet: remove BUG_ON() in twsk_destructor().<br>
78) kernel: net: skb_defer_rx_timestamp should check for phydev before setting up classify.<br>
79) kernel: net: avoid gcc miss optimization regression in data rx path.<br>
<br>
<br>
<b>3.3.x</b><br>
1) goahead: add hardware traffic counters from switch to WebUI.<br>
2) goahead: use 3600 secs as default rekey interval for new BSSIDs.<br>
3) goahead: add ipv6 interfaces adresses to statisctic page.<br>
4) goahead: show dgw interface name if dgw add over if without ip adress at next hop.<br>
5) kernel: ralink_wifi: 76x2: fix rssi feedback work.<br>
6) kernel: net: avoid gcc miss optimization regression in data rx path.<br>
7) kernel: net: bridge: ability to fast isolation any port w/o ebtables.<br>
8) kernel: net: do not process device backlog during unregistration.<br>
9) kernel: net: call rcu_read_lock early in process_backlog.<br>
<br>
<br>
<b>TODO:</b><br>
1) full russian ui (work end ~95%).<br>
2) need add subchannel select for 5GHz module.<br>
3) need add in wireless->basic fast roaming tune table (parametrs see in /etc/scripts/wifi_roaming.sh, only 76x2 drivers).<br>
4) need add in wireless->advanced BandSteering option if CONFIG_BAND_STEERING=y.<br>
5) need add in wireless->advanced IEEE80211H option (need for 5GHz outdor AP sertifications, this 1/0 per bssid param with ; divider).<br>
6) port support l2tp/pptp hardware NAT offload (really needed? in sdk very ugly code).<br>
7) need add davfs2 webui for managment online disk drives (as yandex disk and others very slow, really need?).<br>
8) need add irqbalance in WebUI (in last stage of 7621 dev).<br>
<br>
<br>
<br>