@@ -1108,6 +1108,7 @@
 7) kernel: net: bridge: ability to fast isolation any port w/o ebtables.<br>
 8) kernel: net: do not process device backlog during unregistration.<br>
 9) kernel: net: call rcu_read_lock early in process_backlog.<br>
+10) kernel: net: tcp: don't abort splice() after small transfers.<br>
 <br>
 <br>
 <b>TODO:</b><br>
